Fixed an issue with the home page header text on small screens.

--- a/src/Asm.AmCom.Web/CSS/site.responsive.scss
+++ b/src/Asm.AmCom.Web/CSS/site.responsive.scss
@@ -112,12 +112,12 @@ $phone: 360px;
 	#hero .home-header-container {
 		position: static;
 		margin: 0 auto;
+        width: 100%;
 	}
 
 	#hero .home-header {
 		background: none;
 		position: static;
-		width: auto;
 		opacity: 1 !important;
 		animation-name: none !important;
 		box-shadow: none;
